# helms

./: .gitignore  AGENTS.md  CAPABILITIES.md  CHANGELOG.md  CLAUDE.md  CODEX.md  Cargo.toml  DEMO.md  GEMINI.md  Justfile  MILESTONES.md  QUALITY_BACKLOG.md  README.md  clippy.toml
apps/crm-helm/: Cargo.toml  build.rs
apps/crm-helm/src/: conversations.rs  documents.rs  main.rs  opportunities.rs  parties.rs  workflow.rs
apps/crm-helm/src/truths/: plan_outbound_campaign.rs
contracts/: Cargo.toml  module-registry.yaml
contracts/crates/helm-event-substrate/: Cargo.toml
contracts/crates/helm-event-substrate/src/: event.rs  hub.rs  lease.rs  lib.rs  memory.rs  sse.rs
contracts/crates/helm-event-substrate/tests/: feature_gate.rs
contracts/crates/helm-module-contracts/: Cargo.toml
contracts/crates/helm-module-contracts/src/: lib.rs  operator_preview.rs  operator_receipts.rs  showcase_pipeline.rs
contracts/crates/helm-module-contracts/tests/: negative_operator_receipts.rs  proptest_operator_receipts.rs  trybuild_compile_fail.rs
crates/application-kernel/: Cargo.toml
crates/application-kernel/src/: events.rs  kernel.rs  lib.rs  model.rs
crates/application-server/: Cargo.toml  build.rs
crates/application-server/proptest-regressions/truth_runtime/: qualify_inbound_lead.txt
crates/application-server/src/: http_api.rs  job_stream.rs  main.rs  pipeline.rs  proto.rs  realtime.rs  service.rs  sse.rs  truth_runtime.rs
crates/application-server/src/truth_runtime/: activate_subscription.rs  common.rs  evaluate_acquisition_target.rs  generate_data_transformer.rs  match_renewal_context.rs  plan_outbound_campaign.rs  qualify_inbound_lead.rs  reconcile_model_usage_against_customer_ledger.rs  refill_prepaid_ai_credits.rs  schedule_strategic_meetings.rs  score_inbound_fit.rs  suspend_service_on_payment_failure.rs  upgrade_subscription_plan.rs
crates/application-storage/: Cargo.toml
crates/application-storage/src/: lib.rs
crates/capability-registry/: Cargo.toml
crates/capability-registry/src/: lib.rs
crates/crm-app/: Cargo.toml
crates/crm-app/src/: lib.rs  views.rs
crates/crm-contracts/: Cargo.toml
crates/crm-contracts/src/: lib.rs
crates/crm-server/: Cargo.toml
crates/crm-server/src/: http_api.rs  main.rs  service.rs  truth_runtime.rs
crates/crm-server/src/truth_runtime/: activate_subscription.rs  common.rs  match_renewal_context.rs  plan_outbound_campaign.rs  qualify_inbound_lead.rs  reconcile_model_usage_against_customer_ledger.rs  refill_prepaid_ai_credits.rs  schedule_strategic_meetings.rs  score_inbound_fit.rs  suspend_service_on_payment_failure.rs  upgrade_subscription_plan.rs
crates/crm-storage/: Cargo.toml
crates/crm-storage/src/: lib.rs
crates/crm-truths/: Cargo.toml
crates/crm-truths/examples/: real-truth-resolution.rs
crates/crm-truths/src/: evaluators.rs  lib.rs  overlay.rs  recipes.rs  resolver.rs
crates/crm-truths/tests/: applet_manifest.rs  catalog_mount.rs
crates/crm-truths/truths/jobs/: activate_subscription.feature  (+8 more)
crates/director-contracts/: Cargo.toml
crates/director-contracts/src/: action.rs  context.rs  frame.rs  lib.rs  prompt.rs
crates/helm-client/: Cargo.toml
crates/helm-client/src/: budget.rs  client.rs  director.rs  formation.rs  gate_surface.rs  ids.rs  lib.rs  registry.rs  router.rs  temperature.rs
crates/helm-client/tests/: client_integration_tests.rs  registry_tests.rs  router_tests.rs
crates/helm-coordination/: Cargo.toml
crates/helm-coordination/src/: error.rs  events.rs  host.rs  http.rs  ledger.rs  lib.rs  module.rs  presence.rs  principal.rs  service.rs  session.rs  subject.rs
crates/helm-coordination/tests/: characterization.rs  coordination_test.rs  host_mount_test.rs
crates/helm-governed-jobs/: Cargo.toml
crates/helm-governed-jobs/src/: hub.rs  job_stream.rs  lib.rs  stub.rs
crates/helm-governed-jobs/tests/: characterization.rs  gate_test.rs  module_test.rs
crates/helm-module-contracts/: Cargo.toml
crates/helm-module-contracts/src/: lib.rs
crates/helm-notes/: Cargo.toml
crates/helm-notes/src/: capture.rs  lib.rs
crates/helm-operator-control/: Cargo.toml
crates/helm-operator-control/src/: http_api.rs  lib.rs  pipeline.rs
crates/helm-operator-control/tests/: module_test.rs  trybuild_shim_regression.rs
crates/helm-session-contracts/: Cargo.toml
crates/helm-session-contracts/src/: ack.rs  finding.rs  gate.rs  lib.rs  participant.rs  push.rs  urgency.rs
crates/helm-session-host/: Cargo.toml
crates/helm-session-host/src/: delivery.rs  events.rs  host.rs  http.rs  lib.rs  module.rs  presenter.rs  service.rs  store.rs  types.rs
crates/helm-session-host/tests/: host_mount_test.rs  ownership_test.rs
crates/helm-truth-execution/: Cargo.toml
crates/helm-truth-execution/src/: common.rs  dispatcher.rs  error.rs  lib.rs
crates/helm-truth-execution/tests/: error_test.rs  registry_test.rs
crates/plugin-runtime/: Cargo.toml
crates/plugin-runtime/src/: adapter.rs  contract.rs  engine.rs  host.rs  integration.rs  lib.rs  signing.rs  store.rs
crates/plugin-runtime/tests/: wasm_integration.rs  wasm_property_tests.rs
crates/prio-apple-notes-cli/: Cargo.toml
crates/prio-apple-notes-cli/src/: main.rs
crates/prio-expenses/: Cargo.toml
crates/prio-expenses/src/: lib.rs  receipt_extractor.rs
crates/prio-parties/: Cargo.toml
crates/prio-parties/src/: lib.rs
crates/prio-truths/: Cargo.toml
crates/prio-truths/examples/: real-truth-resolution.rs
crates/prio-truths/src/: converge.rs  lib.rs  organism.rs
crates/prio-workflow/: Cargo.toml
crates/prio-workflow/src/: lib.rs
crates/seed-gen/: Cargo.toml
crates/seed-gen/src/: lib.rs  main.rs  showcase_seed.rs
crates/truth-catalog/: Cargo.toml
crates/truth-catalog/examples/: real-truth-resolution.rs
crates/truth-catalog/src/: admission.rs  catalog.rs  converge.rs  equiv.rs  intent_compile.rs  key.rs  lib.rs  orchestration.rs  organism.rs  resolve.rs
crates/truth-catalog/tests/: applet_manifest.rs  compile_fail.rs  negative_tests.rs  orchestration_coverage.rs  property_tests.rs  soak.rs
kb/: Ecosystem.md  (+1 more)
(+268 files in other folders)
