[workspace]
resolver = "2"
members = [
    # Application layer.
    "crates/crm-contracts",
    "crates/workbench-backend",
    "crates/application-kernel",
    "crates/application-storage",
    "crates/application-server",

    # Capability and truth crates.
    "crates/capability-core",
    "crates/capability-registry",
    "crates/prio-catalog",
    "crates/prio-identity",
    "crates/prio-parties",
    "crates/prio-conversations",
    "crates/prio-opportunities",
    "crates/prio-tasks",
    "crates/prio-documents",
    "crates/prio-expenses",
    "crates/prio-apple-notes-cli",
    "crates/prio-subscriptions",
    "crates/prio-metering",
    "crates/prio-ledger",
    "crates/prio-entitlements",
    "crates/prio-payments",
    "crates/prio-workflow",
    "crates/prio-approvals",
    "crates/prio-policies",
    "crates/prio-facts",
    "crates/prio-audit",
    "crates/prio-intents",
    "crates/prio-memory",
    "crates/prio-agent-ops",
    "crates/truth-catalog",

    # Platform primitives.
    "crates/notes",

    # Utility and support crates.
    "crates/seed-gen",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axiom-truth = { git = "https://github.com/Reflective-Lab/axiom", tag = "v0.6.0" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Extracted Converge extension packages. Keep the dependency keys stable so
# existing Helm code can keep using `converge_analytics`, `converge_domain`,
# and `converge_knowledge` while the implementation packages live in their new
# repositories.
converge-analytics = { package = "prism", path = "../../extensions/prism/crates/prism" }
converge-core = { path = "../converge/crates/core" }
converge-domain = { package = "atelier-domain", path = "../../atelier/crates/atelier-domain" }
converge-experience = { path = "../converge/crates/experience" }
converge-kernel = { path = "../converge/crates/kernel" }
converge-knowledge = { package = "mnemos", path = "../../extensions/mnemos/crates/mnemos" }
converge-model = { path = "../converge/crates/model" }
converge-optimization = { path = "../converge/crates/optimization" }
converge-pack = { path = "../converge/crates/pack" }
converge-policy = { package = "arbiter", path = "../../extensions/arbiter/crates/arbiter" }
organism-domain = { path = "../organism/crates/domain" }
organism-intelligence = { path = "../organism/crates/intelligence" }
organism-notes = { path = "../organism/crates/notes" }
organism-pack = { path = "../organism/crates/pack" }
organism-runtime = { path = "../organism/crates/runtime" }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
surrealdb = { version = "3.0.4", default-features = false, features = ["protocol-ws", "protocol-http", "kv-mem", "kv-rocksdb"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
proptest = "1"

# Redirect transitive crates.io converge/organism deps to local head
# until the next tag ships. Local-only — remove before publishing.
[patch.crates-io]
converge-client       = { path = "../converge/crates/client" }
converge-core         = { path = "../converge/crates/core" }
converge-experience   = { path = "../converge/crates/experience" }
converge-kernel       = { path = "../converge/crates/kernel" }
converge-model        = { path = "../converge/crates/model" }
converge-optimization = { path = "../converge/crates/optimization" }
converge-pack         = { path = "../converge/crates/pack" }
converge-protocol     = { path = "../converge/crates/protocol" }
converge-provider     = { path = "../converge/crates/provider" }
converge-provider-api = { path = "../converge/crates/provider-api" }
converge-runtime      = { path = "../converge/crates/runtime" }
converge-storage      = { path = "../converge/crates/storage" }
organism-domain       = { path = "../organism/crates/domain" }
organism-intelligence = { path = "../organism/crates/intelligence" }
organism-notes        = { path = "../organism/crates/notes" }
organism-pack         = { path = "../organism/crates/pack" }
organism-runtime      = { path = "../organism/crates/runtime" }
