[workspace]
resolver = "2"
members = [
    # Application layer.
    "apps/desktop/src-tauri",
    "crates/crm-contracts",
    "crates/workbench-backend",
    "crates/application-kernel",
    "crates/application-storage",
    "crates/helm-module-contracts",
    "crates/helm-truth-execution",
    "crates/plugin-runtime",

    # Helm extraction modules.
    "crates/helm-operator-control",
    "crates/helm-governed-jobs",

    # Capability and truth crates.
    "crates/capability-core",
    "crates/capability-registry",
    "crates/prio-catalog",
    "crates/prio-identity",
    "crates/prio-parties",
    "crates/prio-conversations",
    "crates/prio-opportunities",
    "crates/prio-tasks",
    "crates/prio-documents",
    "crates/prio-expenses",
    "crates/prio-apple-notes-cli",
    "crates/prio-subscriptions",
    "crates/prio-metering",
    "crates/prio-ledger",
    "crates/prio-entitlements",
    "crates/prio-payments",
    "crates/prio-workflow",
    "crates/prio-approvals",
    "crates/prio-policies",
    "crates/prio-facts",
    "crates/prio-audit",
    "crates/prio-intents",
    "crates/prio-memory",
    "crates/prio-agent-ops",
    "crates/truth-catalog",

    # Platform primitives.
    "crates/notes",

    # Utility and support crates.
    "crates/seed-gen",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
publish = false

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axiom-truth = { path = "../axiom" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Extracted Converge extension packages. Keep the dependency keys stable so
# existing Helm code can keep using `converge_analytics`, `converge_domain`,
# `converge_knowledge`, and `converge_policy` while the implementation
# packages live in their canonical `converge-<brand>-<topic>` form.
converge-analytics = { package = "converge-prism-analytics", path = "../../mosaic-extensions/prism-analytics/crates/prism" }
converge-core = { path = "../converge/crates/core" }
converge-domain = { package = "converge-atelier-domain", path = "../../atelier-showcase/crates/atelier-domain" }
converge-experience = { path = "../converge/crates/experience" }
converge-kernel = { path = "../converge/crates/kernel" }
converge-knowledge = { package = "converge-mnemos-knowledge", path = "../../mosaic-extensions/mnemos-knowledge/crates/mnemos" }
# `_chat` feature pulled in here so axiom-truth's `guidance` module (which
# imports `manifold::select_healthy_chat_backend`, gated behind `_chat` in the
# local manifold) compiles via the [patch.crates-io] redirect. Drop once
# manifold publishes a version that ungates the selection helpers or axiom
# bumps to one that does.
converge-manifold-adapters = { path = "../../mosaic-extensions/manifold-adapters/crates/manifold", features = ["_chat"] }
converge-model = { path = "../converge/crates/model" }
converge-optimization = { path = "../converge/crates/optimization" }
converge-pack = { path = "../converge/crates/pack" }
converge-policy = { package = "converge-arbiter-policy", path = "../../mosaic-extensions/arbiter-policy/crates/arbiter" }
converge-provider = { path = "../converge/crates/provider" }
ed25519-dalek = "2"
hex = "0.4"
organism-domain = { path = "../../atelier-showcase/crates/organism-domain" }
organism-intelligence = { path = "../organism/crates/intelligence" }
organism-notes = { path = "../organism/crates/notes" }
organism-pack = { path = "../organism/crates/pack" }
organism-runtime = { path = "../organism/crates/runtime" }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
strum = { version = "0.28", features = ["derive"] }
surrealdb = { version = "3.0.4", default-features = false, features = ["protocol-ws", "protocol-http", "kv-mem", "kv-rocksdb"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = "43"
proptest = "1"

[workspace.lints.clippy]
# RP-HERMETIC-UNIT (Reflective QUALITY_BACKLOG.md → QF-2026-06-02-05):
# denies `reqwest::Client::new` / `reqwest::blocking::Client::new` /
# `reqwest::Client::builder` / `reqwest::blocking::Client::builder` so
# unit tests can't accidentally hit the network. Configured list lives
# in `clippy.toml` at the workspace root.
#
# Production callsites either thread a `client: &reqwest::blocking::Client`
# parameter through the call path (see KB standard
# `hermetic-unit-tests.md`) or annotate the construction with
# `#[allow(clippy::disallowed_methods)]` + a justification comment.
# Set to `deny` 2026-06-07 after the single helms callsite
# (prio-expenses/src/receipt_extractor.rs send_ollama_request /
# query_ollama_with_text / ollama_extract) was migrated to the
# threaded-client pattern.
disallowed_methods = "deny"

# Redirect transitive crates.io converge/organism/extension deps to local head
# until the next tag ships. Local-only — remove before publishing.
[patch.crates-io]
axiom-truth                = { path = "../axiom" }
converge-client            = { path = "../converge/crates/client" }
converge-core              = { path = "../converge/crates/core" }
converge-experience        = { path = "../converge/crates/experience" }
converge-kernel            = { path = "../converge/crates/kernel" }
converge-model             = { path = "../converge/crates/model" }
converge-optimization      = { path = "../converge/crates/optimization" }
converge-pack              = { path = "../converge/crates/pack" }
converge-protocol          = { path = "../converge/crates/protocol" }
converge-provider          = { path = "../converge/crates/provider" }
converge-runtime           = { path = "../converge/crates/runtime" }
converge-storage           = { path = "../converge/crates/storage" }
converge-arbiter-policy    = { path = "../../mosaic-extensions/arbiter-policy/crates/arbiter" }
converge-atelier-domain    = { path = "../../atelier-showcase/crates/atelier-domain" }
converge-ferrox-solver     = { path = "../../mosaic-extensions/ferrox-solvers/crates/ferrox" }
converge-manifold-adapters = { path = "../../mosaic-extensions/manifold-adapters/crates/manifold" }
converge-mnemos-knowledge  = { path = "../../mosaic-extensions/mnemos-knowledge/crates/mnemos" }
converge-prism-analytics   = { path = "../../mosaic-extensions/prism-analytics/crates/prism" }
organism-domain            = { path = "../../atelier-showcase/crates/organism-domain" }
organism-intelligence      = { path = "../organism/crates/intelligence" }
organism-notes             = { path = "../organism/crates/notes" }
organism-pack              = { path = "../organism/crates/pack" }
organism-runtime           = { path = "../organism/crates/runtime" }
