[workspace]
resolver = "2"
members = [
    # Application layer.
    "apps/desktop/src-tauri",
    "crates/crm-contracts",
    "crates/workbench-backend",
    "crates/application-kernel",
    "crates/application-storage",
    "crates/helm-truth-execution",
    "crates/plugin-runtime",

    # Helm extraction modules.
    "crates/helm-operator-control",
    "crates/helm-governed-jobs",
    "crates/helm-coordination",

    # Session Intelligence Spine (Plan 1).
    "crates/helm-session-contracts",
    "crates/director-contracts",
    "crates/helm-client",

    # Session Intelligence Spine (Plan 2).
    "crates/helm-session-host",

    # Capability and truth crates.
    "crates/capability-core",
    "crates/capability-registry",
    "crates/prio-catalog",
    "crates/prio-identity",
    "crates/prio-parties",
    "crates/prio-conversations",
    "crates/prio-opportunities",
    "crates/prio-tasks",
    "crates/prio-documents",
    "crates/prio-expenses",
    "crates/prio-apple-notes-cli",
    "crates/prio-subscriptions",
    "crates/prio-metering",
    "crates/prio-ledger",
    "crates/prio-entitlements",
    "crates/prio-payments",
    "crates/prio-workflow",
    "crates/prio-approvals",
    "crates/prio-policies",
    "crates/prio-facts",
    "crates/prio-audit",
    "crates/prio-intents",
    "crates/prio-memory",
    "crates/prio-agent-ops",
    "crates/truth-catalog",

    # Platform primitives.
    "crates/notes",

    # Utility and support crates.
    "crates/seed-gen",
]

[workspace.package]
version = "0.2.1"
edition = "2024"
rust-version = "1.96.0"
license = "MIT"
repository = "https://github.com/Reflective-Lab/helms"
publish = true

[workspace.dependencies]
anyhow = "1"
async-stream = "0.3"
axiom-truth = { version = "0.15.3", path = "../axiom" }
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
# Extracted Converge extension packages. Keep the dependency keys stable so
# existing Helm code can keep using `converge_analytics`, `converge_domain`,
# `converge_knowledge`, and `converge_policy` while the implementation
# packages live in their canonical `converge-<brand>-<topic>` form.
converge-analytics = { version = "2.0.3", package = "converge-prism-analytics", path = "../../mosaic-extensions/prism-analytics/crates/prism" }
converge-core = { version = "3.9.3", path = "../converge/crates/core" }
converge-domain = { version = "1.5.0", package = "converge-atelier-domain", path = "../../atelier-showcase/crates/atelier-domain" }
converge-experience = { version = "3.9.3", path = "../converge/crates/experience" }
converge-kernel = { version = "3.9.3", path = "../converge/crates/kernel" }
converge-knowledge = { version = "1.2.4", package = "converge-mnemos-knowledge", path = "../../mosaic-extensions/mnemos-knowledge/crates/mnemos" }
# `_chat` feature pulled in here so axiom-truth's `guidance` module (which
# imports `manifold::select_healthy_chat_backend`, gated behind `_chat`)
# compiles.
converge-manifold-adapters = { version = "1.1.3", path = "../../mosaic-extensions/manifold-adapters/crates/manifold", features = ["_chat"] }
converge-model = { version = "3.9.3", path = "../converge/crates/model" }
converge-optimization = { version = "3.9.3", path = "../converge/crates/optimization" }
converge-pack = { version = "3.9.3", path = "../converge/crates/pack" }
converge-policy = { version = "2.0.3", package = "converge-arbiter-policy", path = "../../mosaic-extensions/arbiter-policy/crates/arbiter" }
converge-provider = { version = "3.9.3", path = "../converge/crates/provider" }
ed25519-dalek = "2"
hex = "0.4"
organism-domain = { version = "1.5.0", path = "../../atelier-showcase/crates/organism-domain" }
organism-intelligence = { version = "1.9.4", path = "../organism/crates/intelligence" }
organism-notes = { version = "1.9.4", path = "../organism/crates/notes" }
organism-pack = { version = "1.9.4", path = "../organism/crates/pack" }
organism-runtime = { version = "1.9.4", path = "../organism/crates/runtime" }
prost = "0.13"
prost-types = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
strum = { version = "0.28", features = ["derive"] }
surrealdb = { version = "3.0.4", default-features = false, features = ["protocol-ws", "protocol-http", "kv-mem", "kv-rocksdb"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tokio-test = "0.4"
tokio-stream = "0.1"
tonic = { version = "0.12", features = ["transport"] }
tonic-build = "0.12"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["serde", "v4"] }
wasmtime = "43"
proptest = "1"

[workspace.lints.clippy]
# RP-HERMETIC-UNIT (Reflective QUALITY_BACKLOG.md → QF-2026-06-02-05):
# denies `reqwest::Client::new` / `reqwest::blocking::Client::new` /
# `reqwest::Client::builder` / `reqwest::blocking::Client::builder` so
# unit tests can't accidentally hit the network. Configured list lives
# in `clippy.toml` at the workspace root.
#
# Production callsites either thread a `client: &reqwest::blocking::Client`
# parameter through the call path (see KB standard
# `hermetic-unit-tests.md`) or annotate the construction with
# `#[allow(clippy::disallowed_methods)]` + a justification comment.
# Set to `deny` 2026-06-07 after the single helms callsite
# (prio-expenses/src/receipt_extractor.rs send_ollama_request /
# query_ollama_with_text / ollama_extract) was migrated to the
# threaded-client pattern.
disallowed_methods = "deny"

# RFL-136: axiom-truth (and other published siblings consumed by path) declare
# converge-*/organism-* as plain registry dependencies. Without these patches
# cargo builds TWO copies of each shared crate — one from crates.io, one from
# the sibling path — and their types are distinct (E0308 "expected
# `converge_core::...`, found `ContextState`" in truth-catalog). Patching
# forces the whole graph onto the sibling checkouts, matching the CI
# sibling-checkout topology (scripts/ci/checkout-reflective-siblings.sh).
# Same pattern as ../organism/Cargo.toml.
[patch.crates-io]
converge-core              = { path = "../converge/crates/core" }
converge-experience        = { path = "../converge/crates/experience" }
converge-kernel            = { path = "../converge/crates/kernel" }
converge-model             = { path = "../converge/crates/model" }
converge-optimization      = { path = "../converge/crates/optimization" }
converge-pack              = { path = "../converge/crates/pack" }
converge-provider          = { path = "../converge/crates/provider" }
converge-storage           = { path = "../converge/crates/storage" }
converge-manifold-adapters = { path = "../../mosaic-extensions/manifold-adapters/crates/manifold" }
converge-fuzzy-inference   = { path = "../../mosaic-extensions/prism-analytics/crates/fuzzy" }
organism-adversarial       = { path = "../organism/crates/adversarial" }
organism-intent            = { path = "../organism/crates/intent" }
organism-learning          = { path = "../organism/crates/learning" }
organism-pack              = { path = "../organism/crates/pack" }
organism-planning          = { path = "../organism/crates/planning" }
organism-simulation        = { path = "../organism/crates/simulation" }
