[package]
name = "application-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = { workspace = true }
