[package]
name = "application-kernel"
description = "Helms application kernel — shared service runtime for Helm application modules."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
chrono.workspace = true
serde.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
proptest = { workspace = true }
