[package]
name = "application-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "application-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
converge-analytics.workspace = true
converge-core.workspace = true
converge-domain.workspace = true
converge-kernel.workspace = true
converge-knowledge.workspace = true
converge-optimization.workspace = true
converge-pack.workspace = true
converge-provider.workspace = true
organism-pack.workspace = true
polars = { version = "0.51", features = ["lazy", "parquet"] }
application-kernel = { path = "../application-kernel" }
application-storage = { path = "../application-storage" }
prost.workspace = true
prost-types.workspace = true
capability-core = { path = "../capability-core" }
capability-registry = { path = "../capability-registry" }
truth-catalog = { path = "../truth-catalog" }
workbench-backend = { path = "../workbench-backend" }
sha2 = "0.10"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
proptest = { workspace = true }

[build-dependencies]
tonic-build.workspace = true
