[package]
name = "application-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
converge-core.workspace = true
converge-experience.workspace = true
converge-pack.workspace = true
application-kernel = { path = "../application-kernel" }
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
