[package]
name = "crm-server"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "crm-server"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
converge-analytics = { path = "../../../converge/crates/analytics" }
converge-core = { path = "../../../converge/crates/core" }
converge-domain = { path = "../../../converge/crates/domain" }
converge-knowledge = { path = "../../../converge/crates/knowledge" }
converge-optimization = { path = "../../../converge/crates/optimization" }
crm-kernel = { path = "../crm-kernel" }
crm-storage = { path = "../crm-storage" }
prost.workspace = true
prost-types.workspace = true
prio-module-core = { path = "../prio-module-core" }
prio-modules = { path = "../prio-modules" }
prio-truths = { path = "../prio-truths" }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tempfile = "3"
uuid.workspace = true

[dev-dependencies]
tower = "0.5"
proptest = { workspace = true }

[build-dependencies]
tonic-build.workspace = true
