[package]
name = "crm-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
converge-core = { path = "../../../converge.zone/crates/core" }
converge-experience = { path = "../../../converge.zone/crates/experience" }
crm-kernel = { path = "../crm-kernel" }
serde.workspace = true
serde_json.workspace = true
surrealdb.workspace = true
thiserror.workspace = true
tokio.workspace = true
