[package]
name = "crm-truths"
description = "CRM truth content over the truth-catalog mechanism — app-side forever, never foundation."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
truth-catalog = { version = "0.2.1", path = "../truth-catalog" }
capability-core = { version = "0.2.1", path = "../capability-core" }
capability-registry = { version = "0.2.1", path = "../capability-registry" }
axiom-truth.workspace = true
converge-kernel.workspace = true
converge-model.workspace = true
organism-pack.workspace = true
organism-runtime.workspace = true
chrono.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
uuid.workspace = true
