[package]
name = "director-contracts"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
helm-session-contracts = { path = "../helm-session-contracts" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
