[package]
name = "director-contracts"
description = "AI Director contract types for the Helms Session Intelligence Spine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
helm-session-contracts = { version = "0.2.1", path = "../helm-session-contracts" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }
