[package]
name = "helm-client"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
director-contracts = { path = "../director-contracts" }
helm-session-contracts = { path = "../helm-session-contracts" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
