[package]
name = "helm-client"
description = "Client library for Helm sessions and the Session Intelligence Spine."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
director-contracts = { version = "0.2.1", path = "../director-contracts" }
helm-session-contracts = { version = "0.2.1", path = "../helm-session-contracts" }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
serde_json.workspace = true
