[package]
name = "helm-coordination"
description = "helm-coordination — multi-operator coordination for Helm's headless surface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
# RP-LAYERING(RFL-125): held from crates.io — this crate needs runway-app-host
# HEAD APIs (ModuleState, HelmModule::module_state, sse::event_stream,
# awaitable EventSubscription), and runway-app-host is publish = false by
# documented design (internal runway-ambient substrate). Publish this crate
# only after the runway layering fork is resolved.
publish = false

[dependencies]
anyhow.workspace = true
async-stream.workspace = true
async-trait = "0.1"
axum.workspace = true
chrono.workspace = true
application-kernel = { version = "0.2.1", path = "../application-kernel" }
helm-governed-jobs = { version = "0.2.1", path = "../helm-governed-jobs" }
helm-module-contracts = { version = "0.2.1", path = "../helm-module-contracts" }
runway-app-host = { version = "3.4.2", path = "../../../../runtime-runway/crates/runway-app-host" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-stream = { workspace = true }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
application-storage = { path = "../application-storage" }
converge-core.workspace = true
helm-truth-execution = { path = "../helm-truth-execution" }
http-body-util = "0.1"
runway-storage = { path = "../../../../runtime-runway/crates/runway-storage" }
tempfile = "3"
tonic.workspace = true
tower = "0.5"
